<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.youfan.app.android.MapsActivity" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:title="@string/app_name">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/party_detail"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/direction_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="20dp"
            android:paddingRight="10dp"
            android:text="@string/direction"
            android:gravity="center_vertical|right"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"/>
    </android.support.v7.widget.Toolbar>

</FrameLayout>
