<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/start_party"
                android:textColor="@android:color/white"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

            <TextView
                android:id="@+id/done_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center"
                android:text="@string/done"
                android:layout_gravity="right"
                android:textColor="@android:color/white"
                android:background="?android:attr/selectableItemBackground" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/start_party"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="left"
                android:hint="@string/start_party_hint"
                android:paddingLeft="10dp" />

            <Button
                android:id="@+id/start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttonBackground"
                android:gravity="left|center_vertical"
                android:padding="10dp"
                android:drawableLeft="@drawable/appointmet"
                android:drawablePadding="10dp"
                android:drawableTint="@color/drawableIconColor"
                android:drawableRight="@drawable/forward"
                android:text="@string/start_time" />

            <Button
                android:id="@+id/choose_restaurant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttonBackground"
                android:gravity="left|center_vertical"
                android:drawableLeft="@drawable/location"
                android:drawableRight="@drawable/forward"
                android:drawablePadding="10dp"
                android:drawableTint="@color/drawableIconColor"
                android:padding="10dp"
                android:text="@string/choose_restaurant" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:padding="12dp"
                android:background="@color/buttonBackground"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/enter_people_limit_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:drawableLeft="@drawable/people"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/drawableIconColor"
                    android:text="@string/people_limit" />

                <EditText
                    android:id="@+id/enter_people_limit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/buttonBackground"
                    android:paddingRight="5dp"
                    android:gravity="right|center_vertical"
                    android:inputType="number" />

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />
    </FrameLayout>

</LinearLayout>
