<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/host_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="chuning"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/host_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="Android dev"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/HeaderText"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/start_time" />

        <TextView
            android:id="@+id/detail_start_time"
            style="@style/detailText.Text"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="Feb 24 3:00pm"/>

        <View
            style="@style/divider"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_weight="1"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/show_people_attending"
            style="@style/HeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people_attented"
            android:paddingLeft="15dp" />

        <GridLayout
            android:id="@+id/attendant_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4" />

        <View
            style="@style/divider"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_weight="1"
            android:background="@color/gray" />

        <TextView
            style="@style/HeaderText"
            android:paddingLeft="15dp"
            android:paddingBottom="5dp"
            android:text="@string/party_location" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="150dp"/>

        <TextView
            style="@style/detailText.Text"
            android:id="@+id/detail_address"
            android:paddingTop="5dp"
            android:gravity="center"
            android:text="111 park st" />

        <View
            style="@style/divider"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_weight="1"
            android:background="@color/gray" />

        <TextView
            style="@style/HeaderText"
            android:paddingLeft="15dp"
            android:text="@string/party_introduction" />

        <TextView
            android:id="@+id/detail_topic"
            style="@style/detailText.Text"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="Happy CODING" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">
        </LinearLayout>
    </LinearLayout>
</ScrollView>