<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:title="@string/app_name">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/done_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="20dp"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical|right"
                android:paddingRight="10dp"
                android:text="@string/edit"
                android:textColor="@android:color/white" />
        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:layout_marginBottom="20dp"
            android:background="#777"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/user_profile_picture"
                    android:layout_width="@dimen/about_me_profile_image_size"
                    android:layout_height="@dimen/about_me_profile_image_size"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/ic_action_name" />

                <TextView
                    android:id="@+id/user_name"
                    style="@style/HeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Chuning"
                    android:textColor="@android:color/white"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/user_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="hahahahah"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

            </LinearLayout>
        </FrameLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/party_created_cardview"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="4dp"
            app:cardElevation="1dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray_holo_dark">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.5"
                    android:scaleType="fitXY"
                    android:src="@drawable/my_event_host" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/party_initiated"
                    android:textColor="@android:color/white" />

            </FrameLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/party_joined_cardview"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="4dp"
            app:cardElevation="1dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray_holo_dark">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.6"
                    android:scaleType="fitXY"
                    android:src="@drawable/my_joined_event" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/party_joined"
                    android:textColor="@android:color/white" />

            </FrameLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent" />

</FrameLayout>